FLOE-3: Fixed issue with flickering transcript.

--- a/project/media/javascripts/videoPlayer/css/VideoPlayer.css
+++ b/project/media/javascripts/videoPlayer/css/VideoPlayer.css
@@ -394,6 +394,7 @@ ul.fl-videoPlayer-transcripts-languageList li {
     width: 15em;
     overflow: hidden;
     background-color: #f2f2f2;
+    display: none;
 }
 
 .fl-videoPlayer-transcripts-language-dropdown {
